--- a/Module-2-solution/index.html
+++ b/Module-2-solution/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Assignment solution for module 2</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="style2.css">
 </head>
 
 <body>
@@ -13,15 +13,15 @@
 <div class="row">
   <div class="col-lg-4 col-md-6 col-sm-12">
   	<div id="Chicken">Chicken</div>
-  	<p> Borders and Colors: Each section should have a background color set to some color (of your choosing). Set the background color of each section title region to some unique color (of your choosing). Make sure that the background color still allows the user to view the text in the section and section title regions. Depending on the color you choose, you may want to change the color of the text so it can be easy to read. Set a black border on both the section and section title region that is 1px thick.</p></div>
+  	<p> Borders and Colors: Each section should have a background color set to some color (of your choosing). Set the background color of each section title region to some unique color (of your choosing). Make sure that the background color still allows the user to view the text in the section and section title regions. Depending on the color you choose, you may want to change the color of the text so it can be easy to read. Set a black border on both the section and section title region that is 1px thick.</p></div></div>
 
   <div class="col-lg-4 col-md-6 col-sm-12">
   	<div id="Beef">Beef</div>
-  	<p> Borders and Colors: Each section should have a background color set to some color (of your choosing). Set the background color of each section title region to some unique color (of your choosing). Make sure that the background color still allows the user to view the text in the section and section title regions. Depending on the color you choose, you may want to change the color of the text so it can be easy to read. Set a black border on both the section and section title region that is 1px thick.</p></div>
+  	<p> Borders and Colors: Each section should have a background color set to some color (of your choosing). Set the background color of each section title region to some unique color (of your choosing). Make sure that the background color still allows the user to view the text in the section and section title regions. Depending on the color you choose, you may want to change the color of the text so it can be easy to read. Set a black border on both the section and section title region that is 1px thick.</p></div></div>
 
   <div class="col-lg-4 col-md-12 col-sm-12">
   	<div id="Sushi">Sushi</div>
-  	<p> Borders and Colors: Each section should have a background color set to some color (of your choosing). Set the background color of each section title region to some unique color (of your choosing). Make sure that the background color still allows the user to view the text in the section and section title regions. Depending on the color you choose, you may want to change the color of the text so it can be easy to read. Set a black border on both the section and section title region that is 1px thick.</p></div>
+  	<p> Borders and Colors: Each section should have a background color set to some color (of your choosing). Set the background color of each section title region to some unique color (of your choosing). Make sure that the background color still allows the user to view the text in the section and section title regions. Depending on the color you choose, you may want to change the color of the text so it can be easy to read. Set a black border on both the section and section title region that is 1px thick.</p></div></div>
 </div>
 </body>
 </html>
